--- a/doc/agile/v1/sprint_backlog_06.org
+++ b/doc/agile/v1/sprint_backlog_06.org
@@ -13,36 +13,36 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-11-03 Fri 11:33]
+#+CAPTION: Clock summary at [2017-11-03 Fri 12:08]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *50:38* |       |       | 100.0 |
+| *Total time*                                                                | *51:13* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 50:38   |       |       | 100.0 |
-| Active                                                                      |         | 50:38 |       | 100.0 |
-| COMPLETED Edit release notes for previous sprint                            |         |       |  2:19 |   4.6 |
+| Stories                                                                     | 51:13   |       |       | 100.0 |
+| Active                                                                      |         | 51:13 |       | 100.0 |
+| COMPLETED Edit release notes for previous sprint                            |         |       |  2:19 |   4.5 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  2:08 |   4.2 |
 | CANCELLED Add an "at" field to transform stats                              |         |       |  0:10 |   0.3 |
 | COMPLETED Move enablement into yarn                                         |         |       |  1:01 |   2.0 |
 | COMPLETED Consider revamping the project logo                               |         |       |  2:02 |   4.0 |
-| COMPLETED Rename top-level transformations                                  |         |       |  1:33 |   3.1 |
-| COMPLETED Clean-up context usage                                            |         |       |  0:38 |   1.3 |
+| COMPLETED Rename top-level transformations                                  |         |       |  1:33 |   3.0 |
+| COMPLETED Clean-up context usage                                            |         |       |  0:38 |   1.2 |
 | COMPLETED Housekeeper should know of text models                            |         |       |  2:05 |   4.1 |
-| COMPLETED Rename the model to text transforms                               |         |       |  0:29 |   1.0 |
-| COMPLETED Rename kernel and family                                          |         |       |  2:44 |   5.4 |
+| COMPLETED Rename the model to text transforms                               |         |       |  0:29 |   0.9 |
+| COMPLETED Rename kernel and family                                          |         |       |  2:44 |   5.3 |
 | COMPLETED Clean up formatter names                                          |         |       |  1:00 |   2.0 |
 | COMPLETED Caching in travis                                                 |         |       |  0:59 |   1.9 |
 | COMPLETED Consider collapsing element properties into element               |         |       |  1:08 |   2.2 |
-| COMPLETED Create the archetype location properties                          |         |       | 13:58 |  27.6 |
-| COMPLETED Analysis work on moving to c++ 17                                 |         |       |  0:32 |   1.1 |
+| COMPLETED Create the archetype location properties                          |         |       | 13:58 |  27.3 |
+| COMPLETED Analysis work on moving to c++ 17                                 |         |       |  0:32 |   1.0 |
 | COMPLETED Upgrade rtags to latest                                           |         |       |  0:36 |   1.2 |
-| COMPLETED Experiment with adding colour to dia diagrams                     |         |       |  3:01 |   6.0 |
+| COMPLETED Experiment with adding colour to dia diagrams                     |         |       |  3:01 |   5.9 |
 | COMPLETED Move artefact into yarn                                           |         |       |  2:21 |   4.6 |
-| COMPLETED Supply the yarn options to prober                                 |         |       |  0:23 |   0.8 |
+| COMPLETED Supply the yarn options to prober                                 |         |       |  0:23 |   0.7 |
 | STARTED Experiment with a database model                                    |         |       |  1:20 |   2.6 |
-| STARTED Split registrar into two classes                                    |         |       |  0:50 |   1.6 |
-| STARTED Generate file paths as a transform                                  |         |       |  9:21 |  18.5 |
+| STARTED Split registrar into two classes                                    |         |       |  1:25 |   2.8 |
+| STARTED Generate file paths as a transform                                  |         |       |  9:21 |  18.3 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -565,6 +565,7 @@ Actions:
 - put request for generating output, delete output, get outputs
 
 *** STARTED Split registrar into two classes                          :story:
+    CLOCK: [2017-11-03 Fri 11:33]--[2017-11-03 Fri 12:08] =>  0:35
     CLOCK: [2017-11-03 Fri 10:23]--[2017-11-03 Fri 11:13] =>  0:50
 
 At present we do not distinguish between the setting up of the
