--- a/doc/agile/v1/sprint_backlog_06.org
+++ b/doc/agile/v1/sprint_backlog_06.org
@@ -13,15 +13,15 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-11-03 Fri 16:43]
+#+CAPTION: Clock summary at [2017-11-03 Fri 17:06]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *52:55* |       |       | 100.0 |
+| *Total time*                                                                | *53:16* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 52:55   |       |       | 100.0 |
-| Active                                                                      |         | 52:55 |       | 100.0 |
-| COMPLETED Edit release notes for previous sprint                            |         |       |  2:19 |   4.4 |
+| Stories                                                                     | 53:16   |       |       | 100.0 |
+| Active                                                                      |         | 53:16 |       | 100.0 |
+| COMPLETED Edit release notes for previous sprint                            |         |       |  2:19 |   4.3 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  2:08 |   4.0 |
 | CANCELLED Add an "at" field to transform stats                              |         |       |  0:10 |   0.3 |
 | COMPLETED Move enablement into yarn                                         |         |       |  1:01 |   1.9 |
@@ -30,11 +30,11 @@
 | COMPLETED Clean-up context usage                                            |         |       |  0:38 |   1.2 |
 | COMPLETED Housekeeper should know of text models                            |         |       |  2:05 |   3.9 |
 | COMPLETED Rename the model to text transforms                               |         |       |  0:29 |   0.9 |
-| COMPLETED Rename kernel and family                                          |         |       |  2:44 |   5.2 |
+| COMPLETED Rename kernel and family                                          |         |       |  2:44 |   5.1 |
 | COMPLETED Clean up formatter names                                          |         |       |  1:00 |   1.9 |
-| COMPLETED Caching in travis                                                 |         |       |  0:59 |   1.9 |
+| COMPLETED Caching in travis                                                 |         |       |  0:59 |   1.8 |
 | COMPLETED Consider collapsing element properties into element               |         |       |  1:08 |   2.1 |
-| COMPLETED Create the archetype location properties                          |         |       | 13:58 |  26.4 |
+| COMPLETED Create the archetype location properties                          |         |       | 13:58 |  26.2 |
 | COMPLETED Analysis work on moving to c++ 17                                 |         |       |  0:32 |   1.0 |
 | COMPLETED Upgrade rtags to latest                                           |         |       |  0:36 |   1.1 |
 | COMPLETED Experiment with adding colour to dia diagrams                     |         |       |  3:01 |   5.7 |
@@ -42,8 +42,8 @@
 | COMPLETED Supply the yarn options to prober                                 |         |       |  0:23 |   0.7 |
 | STARTED Experiment with a database model                                    |         |       |  1:20 |   2.5 |
 | STARTED Split registrar into two classes                                    |         |       |  1:25 |   2.7 |
-| STARTED Generate file paths as a transform                                  |         |       |  9:21 |  17.7 |
-| STARTED Implement exomodel in terms of exoelements                          |         |       |  1:42 |   3.2 |
+| STARTED Generate file paths as a transform                                  |         |       |  9:21 |  17.6 |
+| STARTED Implement exomodel in terms of exoelements                          |         |       |  2:03 |   3.8 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -921,6 +921,7 @@ We should check that =enable_unique_file_names= is set to true.
 Key: =quilt.cpp.flat_directory_mode.enabled=.
 
 *** STARTED Implement exomodel in terms of exoelements                :story:
+    CLOCK: [2017-11-03 Fri 16:44]--[2017-11-03 Fri 17:05] =>  0:21
     CLOCK: [2017-11-03 Fri 15:01]--[2017-11-03 Fri 16:43] =>  1:42
 
 We were going in the right direction by creating the exomodel, but we
@@ -972,7 +973,10 @@ Notes:
 - we could potentially drop the unparsed type from regular attributes,
   since this is now modeled in exoattributes.
 - annotations transform and naming transform now become part of the
-  endomodel chain.
+  endomodel chain. Actually these all merge into one thing: the
+  exomodel to endomodel transform. The annotations transform is done
+  one element at a time. We must first do the root model so we can
+  extract the naming configuration.
 - we can finally deprecate scribble groups and annotation groups with
   this approach. The KVPs are simply stored with the
   exoelements/exoattributes and processed in place during the
@@ -1117,6 +1121,24 @@ Flat version:
     ]
 }
 #+end_src
+
+Tasks:
+
+- change yarn.dia to remember the "contained by" name rather than the
+  module name. Construct the object names from the contained by name.
+- add exoelement, exoattribute.
+- create a parallel infrastructure in dia that populates the
+  exoelements.
+- create a new transform that converts exoelements into
+  endomodels. Somehow isolate the dia part of the pipeline so we can
+  switch between new world and old world. Actually we could very
+  simply check the exoelements container; if not empty use that,
+  otherwise use legacy.
+- once we get the dia side of the pipeline working, delete all classes
+  related to old world in yarn.dia.
+- create an hydrator that reads the new json and creates
+  exoelements. Add some basic feature switch so we can alternate
+  between new world and old world.
 
 *** Update backend shape to match yarn                                :story:
 
