--- a/doc/agile/v1/sprint_backlog_06.org
+++ b/doc/agile/v1/sprint_backlog_06.org
@@ -13,37 +13,37 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-11-03 Fri 17:06]
+#+CAPTION: Clock summary at [2017-11-04 Sat 14:55]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *53:16* |       |       | 100.0 |
+| *Total time*                                                                | *54:18* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 53:16   |       |       | 100.0 |
-| Active                                                                      |         | 53:16 |       | 100.0 |
+| Stories                                                                     | 54:18   |       |       | 100.0 |
+| Active                                                                      |         | 54:18 |       | 100.0 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  2:19 |   4.3 |
-| STARTED Sprint and product backlog grooming                                 |         |       |  2:08 |   4.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       |  2:08 |   3.9 |
 | CANCELLED Add an "at" field to transform stats                              |         |       |  0:10 |   0.3 |
 | COMPLETED Move enablement into yarn                                         |         |       |  1:01 |   1.9 |
-| COMPLETED Consider revamping the project logo                               |         |       |  2:02 |   3.8 |
+| COMPLETED Consider revamping the project logo                               |         |       |  2:02 |   3.7 |
 | COMPLETED Rename top-level transformations                                  |         |       |  1:33 |   2.9 |
 | COMPLETED Clean-up context usage                                            |         |       |  0:38 |   1.2 |
-| COMPLETED Housekeeper should know of text models                            |         |       |  2:05 |   3.9 |
+| COMPLETED Housekeeper should know of text models                            |         |       |  2:05 |   3.8 |
 | COMPLETED Rename the model to text transforms                               |         |       |  0:29 |   0.9 |
-| COMPLETED Rename kernel and family                                          |         |       |  2:44 |   5.1 |
-| COMPLETED Clean up formatter names                                          |         |       |  1:00 |   1.9 |
+| COMPLETED Rename kernel and family                                          |         |       |  2:44 |   5.0 |
+| COMPLETED Clean up formatter names                                          |         |       |  1:00 |   1.8 |
 | COMPLETED Caching in travis                                                 |         |       |  0:59 |   1.8 |
 | COMPLETED Consider collapsing element properties into element               |         |       |  1:08 |   2.1 |
-| COMPLETED Create the archetype location properties                          |         |       | 13:58 |  26.2 |
+| COMPLETED Create the archetype location properties                          |         |       | 13:58 |  25.7 |
 | COMPLETED Analysis work on moving to c++ 17                                 |         |       |  0:32 |   1.0 |
 | COMPLETED Upgrade rtags to latest                                           |         |       |  0:36 |   1.1 |
-| COMPLETED Experiment with adding colour to dia diagrams                     |         |       |  3:01 |   5.7 |
-| COMPLETED Move artefact into yarn                                           |         |       |  2:21 |   4.4 |
+| COMPLETED Experiment with adding colour to dia diagrams                     |         |       |  3:01 |   5.6 |
+| COMPLETED Move artefact into yarn                                           |         |       |  2:21 |   4.3 |
 | COMPLETED Supply the yarn options to prober                                 |         |       |  0:23 |   0.7 |
 | STARTED Experiment with a database model                                    |         |       |  1:20 |   2.5 |
-| STARTED Split registrar into two classes                                    |         |       |  1:25 |   2.7 |
-| STARTED Generate file paths as a transform                                  |         |       |  9:21 |  17.6 |
-| STARTED Implement exomodel in terms of exoelements                          |         |       |  2:03 |   3.8 |
+| STARTED Split registrar into two classes                                    |         |       |  1:25 |   2.6 |
+| STARTED Generate file paths as a transform                                  |         |       |  9:21 |  17.2 |
+| STARTED Implement exomodel in terms of exoelements                          |         |       |  3:05 |   5.7 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -921,6 +921,8 @@ We should check that =enable_unique_file_names= is set to true.
 Key: =quilt.cpp.flat_directory_mode.enabled=.
 
 *** STARTED Implement exomodel in terms of exoelements                :story:
+    CLOCK: [2017-11-04 Sat 14:10]--[2017-11-04 Sat 14:55] =>  0:45
+    CLOCK: [2017-11-04 Sat 13:33]--[2017-11-04 Sat 13:50] =>  0:17
     CLOCK: [2017-11-03 Fri 16:44]--[2017-11-03 Fri 17:05] =>  0:21
     CLOCK: [2017-11-03 Fri 15:01]--[2017-11-03 Fri 16:43] =>  1:42
 
