--- a/doc/agile/v1/sprint_backlog_06.org
+++ b/doc/agile/v1/sprint_backlog_06.org
@@ -13,14 +13,14 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-11-04 Sat 16:38]
+#+CAPTION: Clock summary at [2017-11-04 Sat 16:59]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *56:00* |       |       | 100.0 |
+| *Total time*                                                                | *56:20* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 56:00   |       |       | 100.0 |
-| Active                                                                      |         | 56:00 |       | 100.0 |
+| Stories                                                                     | 56:20   |       |       | 100.0 |
+| Active                                                                      |         | 56:20 |       | 100.0 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  2:19 |   4.1 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  2:08 |   3.8 |
 | CANCELLED Add an "at" field to transform stats                              |         |       |  0:10 |   0.3 |
@@ -32,18 +32,18 @@
 | COMPLETED Rename the model to text transforms                               |         |       |  0:29 |   0.9 |
 | COMPLETED Rename kernel and family                                          |         |       |  2:44 |   4.9 |
 | COMPLETED Clean up formatter names                                          |         |       |  1:00 |   1.8 |
-| COMPLETED Caching in travis                                                 |         |       |  0:59 |   1.8 |
+| COMPLETED Caching in travis                                                 |         |       |  0:59 |   1.7 |
 | COMPLETED Consider collapsing element properties into element               |         |       |  1:08 |   2.0 |
-| COMPLETED Create the archetype location properties                          |         |       | 13:58 |  24.9 |
-| COMPLETED Analysis work on moving to c++ 17                                 |         |       |  0:32 |   1.0 |
+| COMPLETED Create the archetype location properties                          |         |       | 13:58 |  24.8 |
+| COMPLETED Analysis work on moving to c++ 17                                 |         |       |  0:32 |   0.9 |
 | COMPLETED Upgrade rtags to latest                                           |         |       |  0:36 |   1.1 |
 | COMPLETED Experiment with adding colour to dia diagrams                     |         |       |  3:01 |   5.4 |
 | COMPLETED Move artefact into yarn                                           |         |       |  2:21 |   4.2 |
 | COMPLETED Supply the yarn options to prober                                 |         |       |  0:23 |   0.7 |
 | STARTED Experiment with a database model                                    |         |       |  1:20 |   2.4 |
 | STARTED Split registrar into two classes                                    |         |       |  1:25 |   2.5 |
-| STARTED Generate file paths as a transform                                  |         |       |  9:21 |  16.7 |
-| STARTED Implement exomodel in terms of exoelements                          |         |       |  4:47 |   8.5 |
+| STARTED Generate file paths as a transform                                  |         |       |  9:21 |  16.6 |
+| STARTED Implement exomodel in terms of exoelements                          |         |       |  5:07 |   9.1 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -921,6 +921,7 @@ We should check that =enable_unique_file_names= is set to true.
 Key: =quilt.cpp.flat_directory_mode.enabled=.
 
 *** STARTED Implement exomodel in terms of exoelements                :story:
+    CLOCK: [2017-11-04 Sat 16:39]--[2017-11-04 Sat 16:59] =>  0:20
     CLOCK: [2017-11-04 Sat 14:56]--[2017-11-04 Sat 16:38] =>  1:42
     CLOCK: [2017-11-04 Sat 14:10]--[2017-11-04 Sat 14:55] =>  0:45
     CLOCK: [2017-11-04 Sat 13:33]--[2017-11-04 Sat 13:50] =>  0:17
